# rustlearning

./: .gitignore  Cargo.toml  test.py
.cargo/: config.toml
src/: alignment.rs  bed.rs  epigenomics.rs  fastq.rs  file_format.rs  genomic_intervals.rs  kmer.rs  lib.rs  metagenomics.rs  parallel.rs  proteomics.rs  rnaseq.rs  sam_bam.rs  sequence.rs  single_cell.rs  statistics.rs
